tests/src/frontend/syntax/invalid/invalid_pattern.sk

fun test(): void {
   x match { 0 @ E -> 0 }
}
